// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Editor /> Basic render equals snapshot 1`] = `
<div
  data-testid="ut-front-test"
>
  <div
    class="p-toast p-component p-toast-top-right"
  >
    <div />
  </div>
  <div
    class="p-toolbar p-component"
    role="toolbar"
  >
    <div
      class="p-toolbar-group-left"
    >
      <button
        aria-label="save"
        class="p-button p-component p-button-icon-only p-disabled"
        disabled=""
      >
        <span
          class="p-button-icon p-c pi pi-save"
        />
        <span
          class="p-button-label p-c"
        >
           
        </span>
      </button>
    </div>
    <div
      class="p-toolbar-group-right"
    >
      <button
        aria-label="design"
        class="p-button p-component p-button-icon-only"
      >
        <span
          class="p-button-icon p-c pi pi-cog"
        />
        <span
          class="p-button-label p-c"
        >
           
        </span>
      </button>
    </div>
  </div>
  <div
    class="p-d-flex"
    style="overflow-x: hidden; width: 100%;"
  >
    <div
      class="p-d-flex"
      style="flex-grow: 1;"
    >
      <form
        class="p-grid p-col p-as-start"
      >
        <div
          class="p-col-12 p-xl-6"
        >
          <div>
            <div
              class="p-card p-component p-fluid p-mb-3"
              id="edit"
            >
              <div
                class="p-card-body"
              >
                <div
                  class="p-card-title"
                >
                  Tree
                </div>
                <div
                  class="p-card-content"
                >
                  <div
                    class=""
                  >
                    <div
                      class="p-field p-grid"
                    >
                      <label
                        class="p-col-12 p-md-4"
                        for="treeName"
                      >
                        Name
                      </label>
                      <div
                        class="p-col-12 p-md-8"
                      >
                        <input
                          class="p-inputtext p-component p-filled"
                          id="treeName"
                          name="treeName"
                          value="Oak"
                        />
                      </div>
                    </div>
                    <div
                      class="p-field p-grid"
                    >
                      <label
                        class="p-col-12 p-md-4"
                        for="treeDescription"
                      >
                        Description
                      </label>
                      <div
                        class="p-col-12 p-md-8"
                      >
                        <textarea
                          class="p-inputtextarea p-inputtext p-component"
                          id="treeDescription"
                          name="treeDescription"
                        />
                      </div>
                    </div>
                    <div
                      class="p-field p-grid"
                    >
                      <label
                        class="p-col-12 p-md-4"
                        for="treeType"
                      >
                        Type
                      </label>
                      <div
                        class="p-col-12 p-md-8"
                      >
                        <div
                          class="p-dropdown p-component p-inputwrapper p-inputwrapper-filled"
                          id="treeType"
                        >
                          <div
                            class="p-hidden-accessible"
                          >
                            <input
                              aria-haspopup="listbox"
                              readonly=""
                              type="text"
                            />
                          </div>
                          <div
                            class="p-hidden-accessible p-dropdown-hidden-select"
                          >
                            <select
                              aria-hidden="true"
                              name="treeType"
                              tabindex="-1"
                            >
                              <option
                                value=""
                              />
                              <option
                                value="1"
                              >
                                Conifer
                              </option>
                            </select>
                          </div>
                          <span
                            class="p-dropdown-label p-inputtext"
                          >
                            Conifer
                          </span>
                          <div
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            class="p-dropdown-trigger"
                            role="button"
                          >
                            <span
                              class="p-dropdown-trigger-icon p-clickable pi pi-chevron-down"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="p-col-12 p-xl-6"
        >
          <div>
            <div
              class="p-card p-component p-fluid p-mb-3"
              id="taxonomy"
            >
              <div
                class="p-card-body"
              >
                <div
                  class="p-card-title"
                >
                  Taxonomy
                </div>
                <div
                  class="p-card-content"
                >
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="p-card p-component p-fluid p-mb-3"
              id="reproduction"
            >
              <div
                class="p-card-body"
              >
                <div
                  class="p-card-title"
                >
                  Reproduction
                </div>
                <div
                  class="p-card-content"
                >
                  <div
                    class=""
                  >
                    <div
                      class="p-field p-grid"
                    >
                      <label
                        class="p-col-12 p-md-4"
                        for="seedDescription"
                      >
                        Seed
                      </label>
                      <div
                        class="p-col-12 p-md-8"
                      >
                        <input
                          class="p-inputtext p-component"
                          id="seedDescription"
                          name="seedDescription"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="p-field p-grid"
                    >
                      <label
                        class="p-col-12 p-md-4"
                        for="flowerDescription"
                      >
                        Flower
                      </label>
                      <div
                        class="p-col-12 p-md-8"
                      >
                        <input
                          class="p-inputtext p-component"
                          id="flowerDescription"
                          name="flowerDescription"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="p-field p-grid"
                    >
                      <label
                        class="p-col-12 p-md-4"
                        for="fruitName"
                      >
                        Fruit
                      </label>
                      <div
                        class="p-col-12 p-md-8"
                      >
                        <input
                          class="p-inputtext p-component"
                          id="fruitName"
                          name="fruitName"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="p-col-12 p-xl-6"
        >
          <div>
            <div
              class="p-card p-component p-fluid p-mb-3"
              id="morphology"
            >
              <div
                class="p-card-body"
              >
                <div
                  class="p-card-title"
                >
                  Morphology
                </div>
                <div
                  class="p-card-content"
                >
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="p-col-12 p-xl-6"
        >
          <div>
            <div
              class="p-card p-component p-fluid p-mb-3"
              id="habitat"
            >
              <div
                class="p-card-body"
              >
                <div
                  class="p-card-title"
                >
                  Habitat
                </div>
                <div
                  class="p-card-content"
                >
                  <div
                    class=""
                  >
                    <div
                      class="p-field p-grid"
                    >
                      <div
                        class="p-col-12"
                      >
                        <div
                          class="p-multiselect p-component p-inputwrapper p-inputwrapper-focus MultiSelectPanel-root-5 MultiSelectPanel-root-6"
                          id="habitat"
                        >
                          <div
                            class="p-hidden-accessible"
                          >
                            <input
                              aria-expanded="true"
                              aria-haspopup="listbox"
                              name="habitat"
                              readonly=""
                              role="listbox"
                              tabindex="0"
                              type="text"
                            />
                          </div>
                          <div
                            class="p-multiselect-label-container"
                          >
                            <div
                              class="p-multiselect-label p-multiselect-label-empty"
                            >
                              empty
                            </div>
                          </div>
                          <div
                            class="p-multiselect-trigger"
                          >
                            <span
                              class="p-multiselect-trigger-icon p-c pi pi-chevron-down"
                            />
                          </div>
                          <div
                            class="p-multiselect-panel p-component"
                          >
                            <div
                              class="p-multiselect-header"
                            >
                              <div
                                class="p-checkbox p-component"
                              >
                                <div
                                  class="p-hidden-accessible"
                                >
                                  <input
                                    type="checkbox"
                                  />
                                </div>
                                <div
                                  aria-checked="false"
                                  class="p-checkbox-box"
                                  role="checkbox"
                                >
                                  <span
                                    class="p-checkbox-icon p-c"
                                  />
                                </div>
                              </div>
                              <button
                                class="p-multiselect-close p-link"
                                type="button"
                              >
                                <span
                                  class="p-multiselect-close-icon pi pi-times"
                                />
                              </button>
                            </div>
                            <div
                              class="p-multiselect-items-wrapper"
                              style="max-height: 200px;"
                            >
                              <ul
                                aria-multiselectable="true"
                                class="p-multiselect-items p-component"
                                role="listbox"
                              >
                                <li
                                  aria-selected="false"
                                  class="p-multiselect-item"
                                  role="option"
                                  tabindex="0"
                                >
                                  <div
                                    class="p-checkbox p-component"
                                  >
                                    <div
                                      class="p-checkbox-box"
                                    >
                                      <span
                                        class="p-checkbox-icon p-c"
                                      />
                                    </div>
                                  </div>
                                  <span>
                                    Forests
                                  </span>
                                </li>
                                <li
                                  aria-selected="false"
                                  class="p-multiselect-item"
                                  role="option"
                                  tabindex="0"
                                >
                                  <div
                                    class="p-checkbox p-component"
                                  >
                                    <div
                                      class="p-checkbox-box"
                                    >
                                      <span
                                        class="p-checkbox-icon p-c"
                                      />
                                    </div>
                                  </div>
                                  <span>
                                    Plantations
                                  </span>
                                </li>
                                <li
                                  aria-selected="false"
                                  class="p-multiselect-item"
                                  role="option"
                                  tabindex="0"
                                >
                                  <div
                                    class="p-checkbox p-component"
                                  >
                                    <div
                                      class="p-checkbox-box"
                                    >
                                      <span
                                        class="p-checkbox-icon p-c"
                                      />
                                    </div>
                                  </div>
                                  <span>
                                    Riverbanks
                                  </span>
                                </li>
                                <li
                                  aria-selected="false"
                                  class="p-multiselect-item"
                                  role="option"
                                  tabindex="0"
                                >
                                  <div
                                    class="p-checkbox p-component"
                                  >
                                    <div
                                      class="p-checkbox-box"
                                    >
                                      <span
                                        class="p-checkbox-icon p-c"
                                      />
                                    </div>
                                  </div>
                                  <span>
                                    Rivers
                                  </span>
                                </li>
                                <li
                                  aria-selected="false"
                                  class="p-multiselect-item"
                                  role="option"
                                  tabindex="0"
                                >
                                  <div
                                    class="p-checkbox p-component"
                                  >
                                    <div
                                      class="p-checkbox-box"
                                    >
                                      <span
                                        class="p-checkbox-icon p-c"
                                      />
                                    </div>
                                  </div>
                                  <span>
                                    Rocky areas
                                  </span>
                                </li>
                                <li
                                  aria-selected="false"
                                  class="p-multiselect-item"
                                  role="option"
                                  tabindex="0"
                                >
                                  <div
                                    class="p-checkbox p-component"
                                  >
                                    <div
                                      class="p-checkbox-box"
                                    >
                                      <span
                                        class="p-checkbox-icon p-c"
                                      />
                                    </div>
                                  </div>
                                  <span>
                                    Urban
                                  </span>
                                </li>
                                <li
                                  aria-selected="false"
                                  class="p-multiselect-item"
                                  role="option"
                                  tabindex="0"
                                >
                                  <div
                                    class="p-checkbox p-component"
                                  >
                                    <div
                                      class="p-checkbox-box"
                                    >
                                      <span
                                        class="p-checkbox-icon p-c"
                                      />
                                    </div>
                                  </div>
                                  <span>
                                    Wetlands
                                  </span>
                                </li>
                              </ul>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`<Editor /> Design render equals snapshot 1`] = `
<div
  data-testid="ut-front-test"
>
  <div
    class="p-toast p-component p-toast-top-right"
  >
    <div />
  </div>
  <div
    class="p-toolbar p-component"
    role="toolbar"
  >
    <div
      class="p-toolbar-group-left"
    >
      <button
        aria-label="save"
        class="p-button p-component p-button-icon-only p-disabled"
        disabled=""
      >
        <span
          class="p-button-icon p-c pi pi-save"
        />
        <span
          class="p-button-label p-c"
        >
           
        </span>
      </button>
    </div>
    <div
      class="p-toolbar-group-right"
    >
      <button
        aria-label="design"
        class="p-button p-component p-button-success p-button-icon-only"
      >
        <span
          class="p-button-icon p-c pi pi-cog"
        />
        <span
          class="p-button-label p-c"
        >
           
        </span>
      </button>
    </div>
  </div>
  <div
    class="p-d-flex"
    style="overflow-x: hidden; width: 100%;"
  >
    <div
      class="p-d-flex"
      style="flex-grow: 1;"
    >
      <form
        class="p-grid p-col p-as-start"
      >
        <div
          class="p-col-12 p-xl-6"
          style="outline: 1px dotted #ffff0030;"
        >
          <div>
            <div
              class="p-card p-component p-fluid p-mb-3"
              id="edit"
            >
              <div
                class="p-card-body"
              >
                <div
                  class="p-card-title"
                >
                  <div
                    draggable="true"
                    style="cursor: move;"
                  >
                    Tree
                  </div>
                </div>
                <div
                  class="p-card-content"
                >
                  <div
                    class=""
                  >
                    <div
                      class="p-field p-grid"
                    >
                      <label
                        class="p-col-12 p-md-4"
                        draggable="true"
                        for="treeName"
                        style="cursor: move;"
                      >
                        Name
                      </label>
                      <div
                        class="p-col-12 p-md-8"
                      >
                        <input
                          class="p-inputtext p-component p-filled"
                          id="treeName"
                          name="treeName"
                          value="Oak"
                        />
                      </div>
                    </div>
                    <div
                      class="p-field p-grid"
                    >
                      <label
                        class="p-col-12 p-md-4"
                        draggable="true"
                        for="treeDescription"
                        style="cursor: move;"
                      >
                        Description
                      </label>
                      <div
                        class="p-col-12 p-md-8"
                      >
                        <textarea
                          class="p-inputtextarea p-inputtext p-component"
                          id="treeDescription"
                          name="treeDescription"
                        />
                      </div>
                    </div>
                    <div
                      class="p-field p-grid"
                    >
                      <label
                        class="p-col-12 p-md-4"
                        draggable="true"
                        for="treeType"
                        style="cursor: move;"
                      >
                        Type
                      </label>
                      <div
                        class="p-col-12 p-md-8"
                      >
                        <div
                          class="p-dropdown p-component p-inputwrapper p-inputwrapper-filled"
                          id="treeType"
                        >
                          <div
                            class="p-hidden-accessible"
                          >
                            <input
                              aria-haspopup="listbox"
                              readonly=""
                              type="text"
                            />
                          </div>
                          <div
                            class="p-hidden-accessible p-dropdown-hidden-select"
                          >
                            <select
                              aria-hidden="true"
                              name="treeType"
                              tabindex="-1"
                            >
                              <option
                                value=""
                              />
                              <option
                                value="1"
                              >
                                Conifer
                              </option>
                            </select>
                          </div>
                          <span
                            class="p-dropdown-label p-inputtext"
                          >
                            Conifer
                          </span>
                          <div
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            class="p-dropdown-trigger"
                            role="button"
                          >
                            <span
                              class="p-dropdown-trigger-icon p-clickable pi pi-chevron-down"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="p-card p-component p-fluid p-mb-3"
              style="opacity: 0.5; display: none;"
            >
              <div
                class="p-card-body"
              >
                <div
                  class="p-card-title"
                >
                  <div
                    draggable="true"
                    style="cursor: move;"
                  >
                    [ add row ]
                  </div>
                </div>
                <div
                  class="p-card-content"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="p-col-12 p-xl-6"
          style="outline: 1px dotted #ffff0030;"
        >
          <div>
            <div
              class="p-card p-component p-fluid p-mb-3"
              id="taxonomy"
            >
              <div
                class="p-card-body"
              >
                <div
                  class="p-card-title"
                >
                  <div
                    draggable="true"
                    style="cursor: move;"
                  >
                    Taxonomy
                  </div>
                </div>
                <div
                  class="p-card-content"
                >
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="p-card p-component p-fluid p-mb-3"
              id="reproduction"
            >
              <div
                class="p-card-body"
              >
                <div
                  class="p-card-title"
                >
                  <div
                    draggable="true"
                    style="cursor: move;"
                  >
                    Reproduction
                  </div>
                </div>
                <div
                  class="p-card-content"
                >
                  <div
                    class=""
                  >
                    <div
                      class="p-field p-grid"
                    >
                      <label
                        class="p-col-12 p-md-4"
                        draggable="true"
                        for="seedDescription"
                        style="cursor: move;"
                      >
                        Seed
                      </label>
                      <div
                        class="p-col-12 p-md-8"
                      >
                        <input
                          class="p-inputtext p-component"
                          id="seedDescription"
                          name="seedDescription"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="p-field p-grid"
                    >
                      <label
                        class="p-col-12 p-md-4"
                        draggable="true"
                        for="flowerDescription"
                        style="cursor: move;"
                      >
                        Flower
                      </label>
                      <div
                        class="p-col-12 p-md-8"
                      >
                        <input
                          class="p-inputtext p-component"
                          id="flowerDescription"
                          name="flowerDescription"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="p-field p-grid"
                    >
                      <label
                        class="p-col-12 p-md-4"
                        draggable="true"
                        for="fruitName"
                        style="cursor: move;"
                      >
                        Fruit
                      </label>
                      <div
                        class="p-col-12 p-md-8"
                      >
                        <input
                          class="p-inputtext p-component"
                          id="fruitName"
                          name="fruitName"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="p-card p-component p-fluid p-mb-3"
              style="opacity: 0.5; display: none;"
            >
              <div
                class="p-card-body"
              >
                <div
                  class="p-card-title"
                >
                  <div
                    draggable="true"
                    style="cursor: move;"
                  >
                    [ add row ]
                  </div>
                </div>
                <div
                  class="p-card-content"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="p-col-12 p-xl-6"
          style="outline: 1px dotted #ffff0030;"
        >
          <div>
            <div
              class="p-card p-component p-fluid p-mb-3"
              id="morphology"
            >
              <div
                class="p-card-body"
              >
                <div
                  class="p-card-title"
                >
                  <div
                    draggable="true"
                    style="cursor: move;"
                  >
                    Morphology
                  </div>
                </div>
                <div
                  class="p-card-content"
                >
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="p-card p-component p-fluid p-mb-3"
              style="opacity: 0.5; display: none;"
            >
              <div
                class="p-card-body"
              >
                <div
                  class="p-card-title"
                >
                  <div
                    draggable="true"
                    style="cursor: move;"
                  >
                    [ add row ]
                  </div>
                </div>
                <div
                  class="p-card-content"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="p-col-12 p-xl-6"
          style="outline: 1px dotted #ffff0030;"
        >
          <div>
            <div
              class="p-card p-component p-fluid p-mb-3"
              id="habitat"
            >
              <div
                class="p-card-body"
              >
                <div
                  class="p-card-title"
                >
                  <div
                    draggable="true"
                    style="cursor: move;"
                  >
                    Habitat
                  </div>
                </div>
                <div
                  class="p-card-content"
                >
                  <div
                    class=""
                  >
                    <div
                      class="p-field p-grid"
                    >
                      <div
                        class="p-col-12"
                      >
                        <div
                          class="p-multiselect p-component p-inputwrapper p-inputwrapper-focus MultiSelectPanel-root-15 MultiSelectPanel-root-16"
                          id="habitat"
                        >
                          <div
                            class="p-hidden-accessible"
                          >
                            <input
                              aria-expanded="true"
                              aria-haspopup="listbox"
                              name="habitat"
                              readonly=""
                              role="listbox"
                              tabindex="0"
                              type="text"
                            />
                          </div>
                          <div
                            class="p-multiselect-label-container"
                          >
                            <div
                              class="p-multiselect-label p-multiselect-label-empty"
                            >
                              empty
                            </div>
                          </div>
                          <div
                            class="p-multiselect-trigger"
                          >
                            <span
                              class="p-multiselect-trigger-icon p-c pi pi-chevron-down"
                            />
                          </div>
                          <div
                            class="p-multiselect-panel p-component"
                          >
                            <div
                              class="p-multiselect-header"
                            >
                              <div
                                class="p-checkbox p-component"
                              >
                                <div
                                  class="p-hidden-accessible"
                                >
                                  <input
                                    type="checkbox"
                                  />
                                </div>
                                <div
                                  aria-checked="false"
                                  class="p-checkbox-box"
                                  role="checkbox"
                                >
                                  <span
                                    class="p-checkbox-icon p-c"
                                  />
                                </div>
                              </div>
                              <button
                                class="p-multiselect-close p-link"
                                type="button"
                              >
                                <span
                                  class="p-multiselect-close-icon pi pi-times"
                                />
                              </button>
                            </div>
                            <div
                              class="p-multiselect-items-wrapper"
                              style="max-height: 200px;"
                            >
                              <ul
                                aria-multiselectable="true"
                                class="p-multiselect-items p-component"
                                role="listbox"
                              >
                                <li
                                  aria-selected="false"
                                  class="p-multiselect-item"
                                  role="option"
                                  tabindex="0"
                                >
                                  <div
                                    class="p-checkbox p-component"
                                  >
                                    <div
                                      class="p-checkbox-box"
                                    >
                                      <span
                                        class="p-checkbox-icon p-c"
                                      />
                                    </div>
                                  </div>
                                  <span>
                                    Forests
                                  </span>
                                </li>
                                <li
                                  aria-selected="false"
                                  class="p-multiselect-item"
                                  role="option"
                                  tabindex="0"
                                >
                                  <div
                                    class="p-checkbox p-component"
                                  >
                                    <div
                                      class="p-checkbox-box"
                                    >
                                      <span
                                        class="p-checkbox-icon p-c"
                                      />
                                    </div>
                                  </div>
                                  <span>
                                    Plantations
                                  </span>
                                </li>
                                <li
                                  aria-selected="false"
                                  class="p-multiselect-item"
                                  role="option"
                                  tabindex="0"
                                >
                                  <div
                                    class="p-checkbox p-component"
                                  >
                                    <div
                                      class="p-checkbox-box"
                                    >
                                      <span
                                        class="p-checkbox-icon p-c"
                                      />
                                    </div>
                                  </div>
                                  <span>
                                    Riverbanks
                                  </span>
                                </li>
                                <li
                                  aria-selected="false"
                                  class="p-multiselect-item"
                                  role="option"
                                  tabindex="0"
                                >
                                  <div
                                    class="p-checkbox p-component"
                                  >
                                    <div
                                      class="p-checkbox-box"
                                    >
                                      <span
                                        class="p-checkbox-icon p-c"
                                      />
                                    </div>
                                  </div>
                                  <span>
                                    Rivers
                                  </span>
                                </li>
                                <li
                                  aria-selected="false"
                                  class="p-multiselect-item"
                                  role="option"
                                  tabindex="0"
                                >
                                  <div
                                    class="p-checkbox p-component"
                                  >
                                    <div
                                      class="p-checkbox-box"
                                    >
                                      <span
                                        class="p-checkbox-icon p-c"
                                      />
                                    </div>
                                  </div>
                                  <span>
                                    Rocky areas
                                  </span>
                                </li>
                                <li
                                  aria-selected="false"
                                  class="p-multiselect-item"
                                  role="option"
                                  tabindex="0"
                                >
                                  <div
                                    class="p-checkbox p-component"
                                  >
                                    <div
                                      class="p-checkbox-box"
                                    >
                                      <span
                                        class="p-checkbox-icon p-c"
                                      />
                                    </div>
                                  </div>
                                  <span>
                                    Urban
                                  </span>
                                </li>
                                <li
                                  aria-selected="false"
                                  class="p-multiselect-item"
                                  role="option"
                                  tabindex="0"
                                >
                                  <div
                                    class="p-checkbox p-component"
                                  >
                                    <div
                                      class="p-checkbox-box"
                                    >
                                      <span
                                        class="p-checkbox-icon p-c"
                                      />
                                    </div>
                                  </div>
                                  <span>
                                    Wetlands
                                  </span>
                                </li>
                              </ul>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="p-card p-component p-fluid p-mb-3"
              style="opacity: 0.5; display: none;"
            >
              <div
                class="p-card-body"
              >
                <div
                  class="p-card-title"
                >
                  <div
                    draggable="true"
                    style="cursor: move;"
                  >
                    [ add row ]
                  </div>
                </div>
                <div
                  class="p-card-content"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="p-col-12 p-xl-6"
          style="outline: 1px dotted #ffff0030;"
        >
          <div>
            <div
              class="p-card p-component p-fluid p-mb-3"
              style="opacity: 0.5; display: none;"
            >
              <div
                class="p-card-body"
              >
                <div
                  class="p-card-title"
                >
                  <div
                    draggable="true"
                    style="cursor: move;"
                  >
                    [ add column ]
                  </div>
                </div>
                <div
                  class="p-card-content"
                />
              </div>
            </div>
          </div>
        </div>
      </form>
      <div
        class="p-col-2 p-d-flex-column"
      >
        <div
          class="p-card p-component p-mb-2"
        >
          <div
            class="p-card-body"
          >
            <div
              class="p-card-title"
            >
              Fields
            </div>
            <div
              class="p-card-content"
            >
              <div
                class="p-field p-grid"
              >
                <i
                  class="pi pi-trash p-m-3"
                />
              </div>
              <div
                class="p-field p-grid"
              />
              <div
                class="p-field p-grid"
              >
                <label
                  class="p-col-12"
                  draggable="true"
                  for="treeName"
                  style="cursor: move;"
                >
                  Name
                </label>
              </div>
              <div
                class="p-field p-grid"
              >
                <label
                  class="p-col-12"
                  draggable="true"
                  for="treeDescription"
                  style="cursor: move;"
                >
                  Description
                </label>
              </div>
              <div
                class="p-field p-grid"
              >
                <label
                  class="p-col-12"
                  draggable="true"
                  for="treeType"
                  style="cursor: move;"
                >
                  Type
                </label>
              </div>
              <div
                class="p-field p-grid"
              >
                <label
                  class="p-col-12"
                  draggable="true"
                  for="seedDescription"
                  style="cursor: move;"
                >
                  Seed
                </label>
              </div>
              <div
                class="p-field p-grid"
              >
                <label
                  class="p-col-12"
                  draggable="true"
                  for="maleCone"
                  style="cursor: move;"
                >
                  Male Cone
                </label>
              </div>
              <div
                class="p-field p-grid"
              >
                <label
                  class="p-col-12"
                  draggable="true"
                  for="femaleCone"
                  style="cursor: move;"
                >
                  Female Cone
                </label>
              </div>
              <div
                class="p-field p-grid"
              >
                <label
                  class="p-col-12"
                  draggable="true"
                  for="flowerDescription"
                  style="cursor: move;"
                >
                  Flower
                </label>
              </div>
              <div
                class="p-field p-grid"
              >
                <label
                  class="p-col-12"
                  draggable="true"
                  for="fruitName"
                  style="cursor: move;"
                >
                  Fruit
                </label>
              </div>
              <div
                class="p-field p-grid"
              />
            </div>
          </div>
        </div>
        <div
          class="p-card p-component"
        >
          <div
            class="p-card-body"
          >
            <div
              class="p-card-title"
            >
              Cards
            </div>
            <div
              class="p-card-content"
            >
              <div>
                <div
                  class="p-card p-component p-fluid p-mb-3"
                >
                  <div
                    class="p-card-body"
                  >
                    <div
                      class="p-card-title"
                    >
                      <div
                        draggable="true"
                        style="cursor: move;"
                      >
                        Tree
                      </div>
                    </div>
                    <div
                      class="p-card-content"
                    />
                  </div>
                </div>
              </div>
              <div>
                <div
                  class="p-card p-component p-fluid p-mb-3"
                >
                  <div
                    class="p-card-body"
                  >
                    <div
                      class="p-card-title"
                    >
                      <div
                        draggable="true"
                        style="cursor: move;"
                      >
                        Reproduction
                      </div>
                    </div>
                    <div
                      class="p-card-content"
                    />
                  </div>
                </div>
              </div>
              <div>
                <div
                  class="p-card p-component p-fluid p-mb-3"
                >
                  <div
                    class="p-card-body"
                  >
                    <div
                      class="p-card-title"
                    >
                      <div
                        draggable="true"
                        style="cursor: move;"
                      >
                        Taxonomy
                      </div>
                    </div>
                    <div
                      class="p-card-content"
                    />
                  </div>
                </div>
              </div>
              <div>
                <div
                  class="p-card p-component p-fluid p-mb-3"
                >
                  <div
                    class="p-card-body"
                  >
                    <div
                      class="p-card-title"
                    >
                      <div
                        draggable="true"
                        style="cursor: move;"
                      >
                        Morphology
                      </div>
                    </div>
                    <div
                      class="p-card-content"
                    />
                  </div>
                </div>
              </div>
              <div>
                <div
                  class="p-card p-component p-fluid p-mb-3"
                >
                  <div
                    class="p-card-body"
                  >
                    <div
                      class="p-card-title"
                    >
                      <div
                        draggable="true"
                        style="cursor: move;"
                      >
                        Habitat
                      </div>
                    </div>
                    <div
                      class="p-card-content"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Editor /> Loading render equals snapshot 1`] = `
<div
  data-testid="ut-front-test"
>
  <div
    class="p-toast p-component p-toast-top-right"
  >
    <div />
  </div>
  <div
    class="p-toolbar p-component"
    role="toolbar"
  >
    <div
      class="p-toolbar-group-left"
    >
      <button
        aria-label="save"
        class="p-button p-component p-button-icon-only p-disabled"
        disabled=""
      >
        <span
          class="p-button-icon p-c pi pi-save"
        />
        <span
          class="p-button-label p-c"
        >
           
        </span>
      </button>
    </div>
    <div
      class="p-toolbar-group-right"
    >
      <button
        aria-label="design"
        class="p-button p-component p-button-icon-only p-disabled"
        disabled=""
      >
        <span
          class="p-button-icon p-c pi pi-cog"
        />
        <span
          class="p-button-label p-c"
        >
           
        </span>
      </button>
    </div>
  </div>
  <div
    class="p-d-flex"
    style="overflow-x: hidden; width: 100%;"
  >
    <div
      class="p-d-flex"
      style="flex-grow: 1;"
    >
      <form
        class="p-grid p-col p-as-start"
      >
        <div
          class="p-col-12 p-xl-6"
        >
          <div>
            <div
              class="p-card p-component p-fluid p-mb-3"
              id="edit"
            >
              <div
                class="p-card-body"
              >
                <div
                  class="p-card-title"
                >
                  Tree
                </div>
                <div
                  class="p-card-content"
                >
                  <div
                    class=""
                  >
                    <div
                      class="p-field p-grid"
                    >
                      <label
                        class="p-col-12 p-md-4"
                        for="treeName"
                      >
                        Name
                      </label>
                      <div
                        class="p-col-12 p-md-8"
                      >
                        <div
                          class="p-skeleton p-component p-inputtext"
                          style="width: 100%; height: 1rem;"
                        />
                      </div>
                    </div>
                    <div
                      class="p-field p-grid"
                    >
                      <label
                        class="p-col-12 p-md-4"
                        for="treeDescription"
                      >
                        Description
                      </label>
                      <div
                        class="p-col-12 p-md-8"
                      >
                        <div
                          class="p-skeleton p-component p-inputtext"
                          style="width: 100%; height: 1rem;"
                        />
                      </div>
                    </div>
                    <div
                      class="p-field p-grid"
                    >
                      <label
                        class="p-col-12 p-md-4"
                        for="treeType"
                      >
                        Type
                      </label>
                      <div
                        class="p-col-12 p-md-8"
                      >
                        <div
                          class="p-skeleton p-component p-inputtext"
                          style="width: 100%; height: 1rem;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="p-col-12 p-xl-6"
        >
          <div>
            <div
              class="p-card p-component p-fluid p-mb-3"
              id="taxonomy"
            >
              <div
                class="p-card-body"
              >
                <div
                  class="p-card-title"
                >
                  Taxonomy
                </div>
                <div
                  class="p-card-content"
                >
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="p-card p-component p-fluid p-mb-3"
              id="reproduction"
            >
              <div
                class="p-card-body"
              >
                <div
                  class="p-card-title"
                >
                  Reproduction
                </div>
                <div
                  class="p-card-content"
                >
                  <div
                    class=""
                  >
                    <div
                      class="p-field p-grid"
                    >
                      <label
                        class="p-col-12 p-md-4"
                        for="seedDescription"
                      >
                        Seed
                      </label>
                      <div
                        class="p-col-12 p-md-8"
                      >
                        <div
                          class="p-skeleton p-component p-inputtext"
                          style="width: 100%; height: 1rem;"
                        />
                      </div>
                    </div>
                    <div
                      class="p-field p-grid"
                    >
                      <label
                        class="p-col-12 p-md-4"
                        for="flowerDescription"
                      >
                        Flower
                      </label>
                      <div
                        class="p-col-12 p-md-8"
                      >
                        <div
                          class="p-skeleton p-component p-inputtext"
                          style="width: 100%; height: 1rem;"
                        />
                      </div>
                    </div>
                    <div
                      class="p-field p-grid"
                    >
                      <label
                        class="p-col-12 p-md-4"
                        for="fruitName"
                      >
                        Fruit
                      </label>
                      <div
                        class="p-col-12 p-md-8"
                      >
                        <div
                          class="p-skeleton p-component p-inputtext"
                          style="width: 100%; height: 1rem;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="p-col-12 p-xl-6"
        >
          <div>
            <div
              class="p-card p-component p-fluid p-mb-3"
              id="morphology"
            >
              <div
                class="p-card-body"
              >
                <div
                  class="p-card-title"
                >
                  Morphology
                </div>
                <div
                  class="p-card-content"
                >
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="p-col-12 p-xl-6"
        >
          <div>
            <div
              class="p-card p-component p-fluid p-mb-3"
              id="habitat"
            >
              <div
                class="p-card-body"
              >
                <div
                  class="p-card-title"
                >
                  Habitat
                </div>
                <div
                  class="p-card-content"
                >
                  <div
                    class=""
                  >
                    <div
                      class="p-field p-grid"
                    >
                      <div
                        class="p-col-12"
                      >
                        <div
                          class="p-skeleton p-component p-inputtext"
                          style="width: 100%; height: 1rem;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
